[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "cython", "numpy>=1.24.1"]

[project]
authors = [{name = "Dennis Goeries", email = "dennis.goeries@xfel.eu"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy>=1.24.1",
]
description = "Largest triangle three buckets module for Python written in C"
maintainers = [{name = "Viking Analytics AB", email = "info@vikinganalytics.se"}]
name = "lttbc"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.2"

[project.optional-dependencies]
test = [
  "black",
  "flake8",
  "pytest",
]